[gd_scene format=3 uid="uid://03vakfdtiqjk"]

[ext_resource type="Script" uid="uid://dj00uiodbptnu" path="res://ui/Slot_ui.gd" id="1_mityc"]

[node name="Slot" type="PanelContainer" unique_id=658701258]
custom_minimum_size = Vector2(64, 64)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_mityc")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1922026911]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="TextureRect" type="TextureRect" parent="MarginContainer" unique_id=516286598]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="Quantity" type="Label" parent="." unique_id=1753482744]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/outline_size = 3
text = "x11	"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
